fix search field layout issue

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -87,7 +87,8 @@ nav.ed {
 
 .nav-wrapper .input-field input[type=search] {
   height: auto;
-  padding-left: 2rem;
+  width: 100%;
+  padding-left: 0;
 }
 
 nav ul:not(.indicators) li.k {
